src/parser/cint/CINTParser.cpp

// Generated from CINT.g4 by ANTLR 4.11.1


#include "CINTListener.h"
#include "CINTVisitor.h"

#include "CINTParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CINTParserStaticData final {
  CINTParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CINTParserStaticData(const CINTParserStaticData&) = delete;
  CINTParserStaticData(CINTParserStaticData&&) = delete;
  CINTParserStaticData& operator=(const CINTParserStaticData&) = delete;
  CINTParserStaticData& operator=(CINTParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cintParserOnceFlag;
CINTParserStaticData *cintParserStaticData = nullptr;

void cintParserInitialize() {
  assert(cintParserStaticData == nullptr);
  auto staticData = std::make_unique<CINTParserStaticData>(
    std::vector<std::string>{
      "nondet", "num_expr", "bool_expr", "lit", "relop", "loop", "condition", 
      "then", "else", "assignment", "instruction", "declaration", "declarations", 
      "instructions", "pre", "post", "main"
    },
    std::vector<std::string>{
      "", "'int'", "'if'", "'while'", "'else'", "';'", "'('", "')'", "'{'", 
      "'}'", "'*'", "'-'", "'+'", "'<'", "'<='", "'=='", "'!='", "'>='", 
      "'>'", "'='", "'__VERIFIER_nondet_int'", "'||'", "'&&'", "'!'", "'true'", 
      "'false'", "'typedef'", "'enum'", "','", "'bool'", "'extern'", "'void'", 
      "'main'", "'return'", "'0'"
    },
    std::vector<std::string>{
      "", "INT", "IF", "WHILE", "ELSE", "TERMINATOR", "OPENP", "CLOSEP", 
      "OPENC", "CLOSEC", "MULT", "MINUS", "PLUS", "LT", "LEQ", "EQ", "NEQ", 
      "GEQ", "GT", "ASSIGN", "NONDETNAME", "OR", "AND", "NOT", "TRUE", "FALSE", 
      "TYPEDEF", "ENUM", "COMMA", "BOOL", "EXTERN", "VOID", "MAIN", "RETURN", 
      "ZERO", "POS", "V", "W", "BLOCKCOMMENT", "LINECOMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cintParserStaticData = staticData.release();
}

}

CINTParser::CINTParser(TokenStream *input) : CINTParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CINTParser::CINTParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CINTParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cintParserStaticData->atn, cintParserStaticData->decisionToDFA, cintParserStaticData->sharedContextCache, options);
}

CINTParser::~CINTParser() {
  delete _interpreter;
}

const atn::ATN& CINTParser::getATN() const {
  return *cintParserStaticData->atn;
}

std::string CINTParser::getGrammarFileName() const {
  return "CINT.g4";
}

const std::vector<std::string>& CINTParser::getRuleNames() const {
  return cintParserStaticData->ruleNames;
}

const dfa::Vocabulary& CINTParser::getVocabulary() const {
  return cintParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CINTParser::getSerializedATN() const {
  return cintParserStaticData->serializedATN;
}


//----------------- NondetContext ------------------------------------------------------------------

CINTParser::NondetContext::NondetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CINTParser::NondetContext::NONDETNAME() {
  return getToken(CINTParser::NONDETNAME, 0);
}

tree::TerminalNode* CINTParser::NondetContext::OPENP() {
  return getToken(CINTParser::OPENP, 0);
}

tree::TerminalNode* CINTParser::NondetContext::CLOSEP() {
  return getToken(CINTParser::CLOSEP, 0);
}


size_t CINTParser::NondetContext::getRuleIndex() const {
  return CINTParser::RuleNondet;
}

void CINTParser::NondetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNondet(this);
}

void CINTParser::NondetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNondet(this);
}


std::any CINTParser::NondetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitNondet(this);
  else
    return visitor->visitChildren(this);
}

CINTParser::NondetContext* CINTParser::nondet() {
  NondetContext *_localctx = _tracker.createInstance<NondetContext>(_ctx, getState());
  enterRule(_localctx, 0, CINTParser::RuleNondet);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    match(CINTParser::NONDETNAME);
    setState(35);
    match(CINTParser::OPENP);
    setState(36);
    match(CINTParser::CLOSEP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Num_exprContext ------------------------------------------------------------------

CINTParser::Num_exprContext::Num_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CINTParser::Num_exprContext::OPENP() {
  return getToken(CINTParser::OPENP, 0);
}

std::vector<CINTParser::Num_exprContext *> CINTParser::Num_exprContext::num_expr() {
  return getRuleContexts<CINTParser::Num_exprContext>();
}

CINTParser::Num_exprContext* CINTParser::Num_exprContext::num_expr(size_t i) {
  return getRuleContext<CINTParser::Num_exprContext>(i);
}

tree::TerminalNode* CINTParser::Num_exprContext::CLOSEP() {
  return getToken(CINTParser::CLOSEP, 0);
}

tree::TerminalNode* CINTParser::Num_exprContext::MINUS() {
  return getToken(CINTParser::MINUS, 0);
}

tree::TerminalNode* CINTParser::Num_exprContext::V() {
  return getToken(CINTParser::V, 0);
}

tree::TerminalNode* CINTParser::Num_exprContext::ZERO() {
  return getToken(CINTParser::ZERO, 0);
}

tree::TerminalNode* CINTParser::Num_exprContext::POS() {
  return getToken(CINTParser::POS, 0);
}

CINTParser::NondetContext* CINTParser::Num_exprContext::nondet() {
  return getRuleContext<CINTParser::NondetContext>(0);
}

tree::TerminalNode* CINTParser::Num_exprContext::MULT() {
  return getToken(CINTParser::MULT, 0);
}

tree::TerminalNode* CINTParser::Num_exprContext::PLUS() {
  return getToken(CINTParser::PLUS, 0);
}


size_t CINTParser::Num_exprContext::getRuleIndex() const {
  return CINTParser::RuleNum_expr;
}

void CINTParser::Num_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNum_expr(this);
}

void CINTParser::Num_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNum_expr(this);
}


std::any CINTParser::Num_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitNum_expr(this);
  else
    return visitor->visitChildren(this);
}


CINTParser::Num_exprContext* CINTParser::num_expr() {
   return num_expr(0);
}

CINTParser::Num_exprContext* CINTParser::num_expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CINTParser::Num_exprContext *_localctx = _tracker.createInstance<Num_exprContext>(_ctx, parentState);
  CINTParser::Num_exprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, CINTParser::RuleNum_expr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CINTParser::OPENP: {
        setState(39);
        match(CINTParser::OPENP);
        setState(40);
        num_expr(0);
        setState(41);
        match(CINTParser::CLOSEP);
        break;
      }

      case CINTParser::MINUS: {
        setState(43);
        match(CINTParser::MINUS);
        setState(44);
        num_expr(8);
        break;
      }

      case CINTParser::V: {
        setState(45);
        match(CINTParser::V);
        break;
      }

      case CINTParser::ZERO: {
        setState(46);
        match(CINTParser::ZERO);
        break;
      }

      case CINTParser::POS: {
        setState(47);
        match(CINTParser::POS);
        break;
      }

      case CINTParser::NONDETNAME: {
        setState(48);
        nondet();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(62);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(60);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<Num_exprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNum_expr);
          setState(51);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(52);
          match(CINTParser::MULT);
          setState(53);
          num_expr(8);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<Num_exprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNum_expr);
          setState(54);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(55);
          match(CINTParser::PLUS);
          setState(56);
          num_expr(7);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<Num_exprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNum_expr);
          setState(57);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(58);
          match(CINTParser::MINUS);
          setState(59);
          num_expr(6);
          break;
        }

        default:
          break;
        } 
      }
      setState(64);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Bool_exprContext ------------------------------------------------------------------

CINTParser::Bool_exprContext::Bool_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CINTParser::Bool_exprContext::OPENP() {
  return getToken(CINTParser::OPENP, 0);
}

std::vector<CINTParser::Bool_exprContext *> CINTParser::Bool_exprContext::bool_expr() {
  return getRuleContexts<CINTParser::Bool_exprContext>();
}

CINTParser::Bool_exprContext* CINTParser::Bool_exprContext::bool_expr(size_t i) {
  return getRuleContext<CINTParser::Bool_exprContext>(i);
}

tree::TerminalNode* CINTParser::Bool_exprContext::CLOSEP() {
  return getToken(CINTParser::CLOSEP, 0);
}

tree::TerminalNode* CINTParser::Bool_exprContext::NOT() {
  return getToken(CINTParser::NOT, 0);
}

CINTParser::LitContext* CINTParser::Bool_exprContext::lit() {
  return getRuleContext<CINTParser::LitContext>(0);
}

tree::TerminalNode* CINTParser::Bool_exprContext::FALSE() {
  return getToken(CINTParser::FALSE, 0);
}

tree::TerminalNode* CINTParser::Bool_exprContext::TRUE() {
  return getToken(CINTParser::TRUE, 0);
}

tree::TerminalNode* CINTParser::Bool_exprContext::AND() {
  return getToken(CINTParser::AND, 0);
}

tree::TerminalNode* CINTParser::Bool_exprContext::OR() {
  return getToken(CINTParser::OR, 0);
}


size_t CINTParser::Bool_exprContext::getRuleIndex() const {
  return CINTParser::RuleBool_expr;
}

void CINTParser::Bool_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBool_expr(this);
}

void CINTParser::Bool_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBool_expr(this);
}


std::any CINTParser::Bool_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitBool_expr(this);
  else
    return visitor->visitChildren(this);
}


CINTParser::Bool_exprContext* CINTParser::bool_expr() {
   return bool_expr(0);
}

CINTParser::Bool_exprContext* CINTParser::bool_expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CINTParser::Bool_exprContext *_localctx = _tracker.createInstance<Bool_exprContext>(_ctx, parentState);
  CINTParser::Bool_exprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, CINTParser::RuleBool_expr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(66);
      match(CINTParser::OPENP);
      setState(67);
      bool_expr(0);
      setState(68);
      match(CINTParser::CLOSEP);
      break;
    }

    case 2: {
      setState(70);
      match(CINTParser::NOT);
      setState(71);
      bool_expr(6);
      break;
    }

    case 3: {
      setState(72);
      lit();
      break;
    }

    case 4: {
      setState(73);
      match(CINTParser::FALSE);
      break;
    }

    case 5: {
      setState(74);
      match(CINTParser::TRUE);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(85);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(83);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<Bool_exprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleBool_expr);
          setState(77);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(78);
          match(CINTParser::AND);
          setState(79);
          bool_expr(6);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<Bool_exprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleBool_expr);
          setState(80);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(81);
          match(CINTParser::OR);
          setState(82);
          bool_expr(5);
          break;
        }

        default:
          break;
        } 
      }
      setState(87);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- LitContext ------------------------------------------------------------------

CINTParser::LitContext::LitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CINTParser::Num_exprContext *> CINTParser::LitContext::num_expr() {
  return getRuleContexts<CINTParser::Num_exprContext>();
}

CINTParser::Num_exprContext* CINTParser::LitContext::num_expr(size_t i) {
  return getRuleContext<CINTParser::Num_exprContext>(i);
}

CINTParser::RelopContext* CINTParser::LitContext::relop() {
  return getRuleContext<CINTParser::RelopContext>(0);
}


size_t CINTParser::LitContext::getRuleIndex() const {
  return CINTParser::RuleLit;
}

void CINTParser::LitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLit(this);
}

void CINTParser::LitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLit(this);
}


std::any CINTParser::LitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitLit(this);
  else
    return visitor->visitChildren(this);
}

CINTParser::LitContext* CINTParser::lit() {
  LitContext *_localctx = _tracker.createInstance<LitContext>(_ctx, getState());
  enterRule(_localctx, 6, CINTParser::RuleLit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    num_expr(0);
    setState(89);
    relop();
    setState(90);
    num_expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelopContext ------------------------------------------------------------------

CINTParser::RelopContext::RelopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CINTParser::RelopContext::LT() {
  return getToken(CINTParser::LT, 0);
}

tree::TerminalNode* CINTParser::RelopContext::LEQ() {
  return getToken(CINTParser::LEQ, 0);
}

tree::TerminalNode* CINTParser::RelopContext::EQ() {
  return getToken(CINTParser::EQ, 0);
}

tree::TerminalNode* CINTParser::RelopContext::GT() {
  return getToken(CINTParser::GT, 0);
}

tree::TerminalNode* CINTParser::RelopContext::GEQ() {
  return getToken(CINTParser::GEQ, 0);
}

tree::TerminalNode* CINTParser::RelopContext::NEQ() {
  return getToken(CINTParser::NEQ, 0);
}


size_t CINTParser::RelopContext::getRuleIndex() const {
  return CINTParser::RuleRelop;
}

void CINTParser::RelopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRelop(this);
}

void CINTParser::RelopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRelop(this);
}


std::any CINTParser::RelopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitRelop(this);
  else
    return visitor->visitChildren(this);
}

CINTParser::RelopContext* CINTParser::relop() {
  RelopContext *_localctx = _tracker.createInstance<RelopContext>(_ctx, getState());
  enterRule(_localctx, 8, CINTParser::RuleRelop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 516096) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

CINTParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CINTParser::LoopContext::WHILE() {
  return getToken(CINTParser::WHILE, 0);
}

tree::TerminalNode* CINTParser::LoopContext::OPENP() {
  return getToken(CINTParser::OPENP, 0);
}

CINTParser::Bool_exprContext* CINTParser::LoopContext::bool_expr() {
  return getRuleContext<CINTParser::Bool_exprContext>(0);
}

tree::TerminalNode* CINTParser::LoopContext::CLOSEP() {
  return getToken(CINTParser::CLOSEP, 0);
}

tree::TerminalNode* CINTParser::LoopContext::OPENC() {
  return getToken(CINTParser::OPENC, 0);
}

tree::TerminalNode* CINTParser::LoopContext::CLOSEC() {
  return getToken(CINTParser::CLOSEC, 0);
}

CINTParser::InstructionsContext* CINTParser::LoopContext::instructions() {
  return getRuleContext<CINTParser::InstructionsContext>(0);
}


size_t CINTParser::LoopContext::getRuleIndex() const {
  return CINTParser::RuleLoop;
}

void CINTParser::LoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop(this);
}

void CINTParser::LoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop(this);
}


std::any CINTParser::LoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitLoop(this);
  else
    return visitor->visitChildren(this);
}

CINTParser::LoopContext* CINTParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 10, CINTParser::RuleLoop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(CINTParser::WHILE);
    setState(95);
    match(CINTParser::OPENP);
    setState(96);
    bool_expr(0);
    setState(97);
    match(CINTParser::CLOSEP);
    setState(98);
    match(CINTParser::OPENC);
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 68719476748) != 0) {
      setState(99);
      instructions();
    }
    setState(102);
    match(CINTParser::CLOSEC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

CINTParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CINTParser::ConditionContext::IF() {
  return getToken(CINTParser::IF, 0);
}

tree::TerminalNode* CINTParser::ConditionContext::OPENP() {
  return getToken(CINTParser::OPENP, 0);
}

CINTParser::Bool_exprContext* CINTParser::ConditionContext::bool_expr() {
  return getRuleContext<CINTParser::Bool_exprContext>(0);
}

tree::TerminalNode* CINTParser::ConditionContext::CLOSEP() {
  return getToken(CINTParser::CLOSEP, 0);
}

std::vector<tree::TerminalNode *> CINTParser::ConditionContext::OPENC() {
  return getTokens(CINTParser::OPENC);
}

tree::TerminalNode* CINTParser::ConditionContext::OPENC(size_t i) {
  return getToken(CINTParser::OPENC, i);
}

CINTParser::ThenContext* CINTParser::ConditionContext::then() {
  return getRuleContext<CINTParser::ThenContext>(0);
}

std::vector<tree::TerminalNode *> CINTParser::ConditionContext::CLOSEC() {
  return getTokens(CINTParser::CLOSEC);
}

tree::TerminalNode* CINTParser::ConditionContext::CLOSEC(size_t i) {
  return getToken(CINTParser::CLOSEC, i);
}

tree::TerminalNode* CINTParser::ConditionContext::ELSE() {
  return getToken(CINTParser::ELSE, 0);
}

CINTParser::ElseContext* CINTParser::ConditionContext::else_() {
  return getRuleContext<CINTParser::ElseContext>(0);
}


size_t CINTParser::ConditionContext::getRuleIndex() const {
  return CINTParser::RuleCondition;
}

void CINTParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void CINTParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CINTListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}


std::any CINTParser::ConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CINTVisitor*>(visitor))
    return parserVisitor->visitCondition(this);
  else
    return visitor->visitChildren(this);
}

CINTParser::ConditionContext* CINTParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 12, CINTParser::RuleCondition);
  size_t _la = 0;
